Adds catalog view

--- a/test/fixtures/deposits.yml
+++ b/test/fixtures/deposits.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: deposits
+#
+#  id            :integer          not null, primary key
+#  lot_number_id :integer
+#  plant_id      :integer
+#  date          :date
+#  qty_bank      :integer
+#  qty_consigned :integer
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#  collector_id  :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
