--- a/test/fixtures/lot_numbers.yml
+++ b/test/fixtures/lot_numbers.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: lot_numbers
+#
+#  id         :integer          not null, primary key
+#  number     :string(255)
+#  region     :string(255)
+#  provenance :string(255)
+#  location   :string(255)
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
