--- a/test/fixtures/catalogs.yml
+++ b/test/fixtures/catalogs.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: catalogs
+#
+#  id                 :integer          not null, primary key
+#  lot_number_id      :integer
+#  plant_id           :integer
+#  qty_in_bank        :integer
+#  qty_on_consignment :integer
+#  created_at         :datetime         not null
+#  updated_at         :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
