--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: line_items
+#
+#  id                    :integer          not null, primary key
+#  order_id              :integer
+#  seedmix_or_individual :string(255)
+#  qty                   :integer
+#  created_at            :datetime         not null
+#  updated_at            :datetime         not null
+#  deposit_id            :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
