--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: orders
+#
+#  id           :integer          not null, primary key
+#  number       :string(255)
+#  customer_id  :integer
+#  completed_at :datetime
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
