--- a/test/fixtures/transactions.yml
+++ b/test/fixtures/transactions.yml
@@ -1,3 +1,19 @@
+# == Schema Information
+#
+# Table name: transactions
+#
+#  id              :integer          not null, primary key
+#  deposit_id      :integer
+#  line_item_id    :integer
+#  transfer_id     :integer
+#  qty_deposited   :integer
+#  qty_ordered     :integer
+#  qty_transferred :integer
+#  user_id         :integer
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
