--- a/test/fixtures/order_form_items.yml
+++ b/test/fixtures/order_form_items.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: order_form_items
+#
+#  id            :integer          not null, primary key
+#  order_form_id :integer
+#  plant_id      :integer
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#  grams         :float
+#  deposit_id    :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
