--- a/test/fixtures/order_forms.yml
+++ b/test/fixtures/order_forms.yml
@@ -25,6 +25,9 @@
 #  created_at         :datetime         not null
 #  updated_at         :datetime         not null
 #  order_id           :integer
+#  user_id            :integer
+#  state              :string(255)
+#  telephone          :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
