--- a/test/fixtures/lot_heritages.yml
+++ b/test/fixtures/lot_heritages.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: lot_heritages
+#
+#  id            :integer          not null, primary key
+#  lot_number_id :integer
+#  heritage_id   :integer
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
