--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,8 @@ development:
   database: seedbank_development
   pool: 5
   host: localhost
+  username: postgres
+  password: seedbank
   port: 5432
 production:
   adapter: postgresql
